# MODULO_AI_DAW

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TIMELINE.md  generate_module_catalog.py  modules_catalog.json  modules_catalog.tsv
.github/workflows/: build.yaml  generate_coverage.yaml  juce_compat.yaml  update_docs.yaml
_experiments/: 2026-01-19.txt  2026-01-20.txt  2026-01-21.txt  2026-01-22.txt  2026-01-23.txt  2026-01-24.txt  2026-01-25.txt  2026-01-26.txt  2026-02-01.txt  2026-02-02.txt  2026-02-03.txt  2026-02-04.txt  2026-02-05.txt  2026-02-06.txt  2026-02-07.txt  2026-02-08.txt  2026-02-09.txt  2026-02-10.txt  2026-02-11.txt  2026-02-12.txt  2026-02-13.txt  2026-02-14.txt
examples/: CMakeLists.txt
examples/Reason/: CMakeLists.txt  CURRENT_STATE_ANALYSIS.md  ChordInspectorComponent.cpp  ChordInspectorComponent.h  FxInspectorComponent.cpp  FxInspectorComponent.h  MODULE_AUDIT.md  MixerComponent.cpp  MixerComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  PluginWindow.cpp  PluginWindow.h  REALCHORDS_WALKTHROUGH.md  Reason.cpp  Reason.h  ReasonMainComponent.cpp  ReasonMainComponent.h  ResizeCursors.cpp  ResizeCursors.h  SessionController.cpp  SessionController.h  TimelineComponent.cpp  TimelineComponent.h  TrackColors.h  TrackListComponent.cpp  TrackListComponent.h  TrackStripComponent.cpp  TrackStripComponent.h  TransportBarComponent.cpp  TransportBarComponent.h
modules/: README_CATALOG.md
modules/tracktion_engine/audio_files/: tracktion_AudioFile.test.cpp
modules/tracktion_engine/plugins/: tracktion_PluginManager.cpp  (+1 more)
(+12 files in other folders)
